force-app/main/default/objects/Form__c/fields/Confirmation_Message__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Message__c</fullName>
    <label>Confirmation Message</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>