force-app/main/default/objects/Form__c/fields/Create_PDF_Only__c.field-meta.xml
<CustomField>
    <fullName>Create_PDF_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create PDF Only?</label>
    <type>Checkbox</type>
</CustomField>