force-app/main/default/objects/Form__c/fields/Default_Zoom_Percent__c.field-meta.xml
<CustomField>
    <fullName>Default_Zoom_Percent__c</fullName>
    <description>Default display zoom (80–200%) for this form when users open the form runner. Users can still adjust zoom in the UI. Grant read FLS to form viewers; grant read and edit to form designers.</description>
    <inlineHelpText>Default zoom when the form opens. End users can still use the zoom controls.</inlineHelpText>
    <label>Default Zoom (%)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>80</fullName>
                <label>80%</label>
            </value>
            <value>
                <fullName>90</fullName>
                <label>90%</label>
            </value>
            <value>
                <fullName>100</fullName>
                <label>100%</label>
            </value>
            <value>
                <fullName>110</fullName>
                <label>110%</label>
            </value>
            <value>
                <fullName>120</fullName>
                <label>120%</label>
            </value>
            <value>
                <fullName>130</fullName>
                <default>true</default>
                <label>130%</label>
            </value>
            <value>
                <fullName>140</fullName>
                <label>140%</label>
            </value>
            <value>
                <fullName>150</fullName>
                <label>150%</label>
            </value>
            <value>
                <fullName>160</fullName>
                <label>160%</label>
            </value>
            <value>
                <fullName>170</fullName>
                <label>170%</label>
            </value>
            <value>
                <fullName>180</fullName>
                <label>180%</label>
            </value>
            <value>
                <fullName>190</fullName>
                <label>190%</label>
            </value>
            <value>
                <fullName>200</fullName>
                <label>200%</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>