force-app/main/default/objects/Form__c/fields/Generate_PDF__c.field-meta.xml
<CustomField>
    <fullName>Generate_PDF__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Generate PDF?</label>
    <type>Checkbox</type>
</CustomField>