force-app/main/default/objects/Form__c/fields/Object_Name_for_Prefill_Fields__c.field-meta.xml
<CustomField>
    <fullName>Object_Name_for_Prefill_Fields__c</fullName>
    <label>Object Name for Prefill Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>