force-app/main/default/objects/Form__c/fields/Prefill_Fields__c.field-meta.xml
<CustomField>
    <fullName>Prefill_Fields__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prefill Fields?</label>
    <type>Checkbox</type>
</CustomField>