force-app/main/default/objects/Form__c/fields/Requires_Document_Upload__c.field-meta.xml
<CustomField>
    <fullName>Requires_Document_Upload__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Requires Document Upload?</label>
    <type>Checkbox</type>
</CustomField>