force-app/main/default/objects/Form__c/fields/Requires_Signature__c.field-meta.xml
<CustomField>
    <fullName>Requires_Signature__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Requires Signature?</label>
    <type>Checkbox</type>
</CustomField>