force-app/main/default/objects/Form__c/fields/Requires_Text_for_Signature_Page__c.field-meta.xml
<CustomField>
    <fullName>Requires_Text_for_Signature_Page__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Text for Signature Page?</label>
    <type>Checkbox</type>
</CustomField>