force-app/main/default/objects/Form__c/fields/Show_Summary__c.field-meta.xml
<CustomField>
    <fullName>Show_Summary__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Summary?</label>
    <type>Checkbox</type>
</CustomField>