force-app/main/default/objects/Form__c/fields/Signature_Page_Text__c.field-meta.xml
<CustomField>
    <fullName>Signature_Page_Text__c</fullName>
    <label>Signature Page Text</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>