force-app/main/default/objects/Form__c/listViews/All3.listView-meta.xml
<ListView>
    <fullName>All3</fullName>
    <columns>NAME</columns>
    <columns>Form_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>